# rust-brain

./: .dockerignore  .env.example  .gitignore  .mcp.json  .opencode.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.postgres  KNOWN_ISSUES.md  PROJECT_STATE.md  README.md  RELEASE_CHECKLIST.md  RUSA-151-verification-report.md  VERIFICATION-REPORT-RUSA-281.md  clippy.toml  deny.toml  docker-compose.age-poc.yml  docker-compose.macos.yml  docker-compose.yml  logging-audit.md  nohup.out  opencode.json  package-lock.json  playwright.config.js  tasks-lets-analyses-architecture-wise-and-any-1774029501.md  tasks-logging.json  tasks.md
crates/rb-query/: Cargo.toml
crates/rb-query/src/: cursor.rs  lib.rs  traversal.rs  types.rs
crates/rb-schemas/: Cargo.toml
crates/rb-schemas/src/: lib.rs
crates/rb-tracing/: Cargo.toml
crates/rb-tracing/src/: lib.rs
crates/rustbrain-common/: Cargo.toml
crates/rustbrain-common/src/: config.rs  errors.rs  events.rs  ingest_events.rs  lib.rs  logging.rs  types.rs
crates/rustbrain-common/tests/: logging_integration_test.rs
services/api/: Cargo.toml  Dockerfile
services/api/migrations/: 20260403000001_workspaces.sql  20260403000002_executions.sql  20260403000003_agent_events.sql  20260403000004_validator_runs.sql  20260403000005_benchmarker.sql  20260407000001_bench_case_results_dimension_scores.sql  20260409000001_execution_runtime_info.sql  20260409000002_container_expires_at.sql  20260421000001_agent_events_unknown_type.sql  20260421000002_agent_events_seq.sql  20260421000003_agent_events_content_hash.sql  20260421000004_api_keys.sql
services/api/src/: audit.rs  config.rs  docker.rs  errors.rs  extractors.rs  gaps.rs  github.rs  main.rs  neo4j.rs  opencode.rs  playground.rs  state.rs
services/api/src/execution/: mod.rs  models.rs  runner.rs  sweeper.rs
services/api/src/handlers/: artifacts.rs  benchmarker.rs  chat.rs  consistency.rs  execution.rs  graph.rs  graph_templates.rs  health.rs  ingestion.rs  items.rs  keys.rs  mod.rs  pg_query.rs  playground.rs  repos.rs  search.rs  tasks.rs  typecheck.rs  validator.rs  workspace.rs  workspace_commit.rs  workspace_diff.rs  workspace_label.rs  workspace_reset.rs  workspace_stats.rs  workspace_stream.rs
services/api/src/metrics/: mod.rs  workspace_gauges.rs
services/api/src/middleware/: auth.rs  mod.rs  rate_limit.rs  workspace_metrics.rs
services/api/src/workspace/: lifecycle.rs  manager.rs  mod.rs  models.rs  pg_conn.rs  schema.rs
services/api/static/: classic.html  index.html  playground.html
services/api/static/assets/: index-B7rf9_W8.js  index-BA5AspkZ.css  index-BrFV64hs.js  index-CJbfHFFV.js  index-anedLkn-.css
services/api/static/css/: playground.css
services/api/static/js/: playground.js
services/api/static/js/__tests__/: chat-streaming.test.html
services/api/static/js/components/: api-tester.js  audit.js  call-graph.js  call-sites.js  chat.js  command-palette.js  cypher.js  dashboard.js  function-detail.js  gaps.js  module-tree.js  search.js  sidebar.js  trait-impls.js  type-usages.js
services/api/static/js/lib/: api-client.js  event-bus.js  markdown.js  sse-client.js  state.js
services/api/tests/: api_integration.rs  consistency_integration.rs  edge_case_integration.rs  event_storage_integration.rs  workspace_e2e_isolation.rs  workspace_integration.rs  workspace_isolation_contract.rs  workspace_metrics_integration.rs  workspace_neo4j_isolation.rs
services/api/tests/common/: mod.rs
services/api/tests/fixtures/edge_cases/: ec01_malformed_json.json  ec02_unknown_part_type.json  ec03_missing_required_fields.json  ec04_oversized_event.json  ec05_rapid_burst.json  ec06_slow_consumer_backpressure.json  ec07_reconnect_buffer_eviction.json  ec08_concurrent_writes.json  ec09_runner_crash.json  ec10_empty_execution.json  ec11_only_error_events.json  ec12_duplicate_content_dedup.json  ec13_null_empty_content.json  ec14_sse_connection_dropped.json  ec15_multiple_sse_clients.json  ec16_terminal_state_no_pending.json  ec17_unknown_event_type_check.json
services/audit/: Cargo.toml  Dockerfile
services/audit/src/: audit_writer.rs  config.rs  health.rs  leak_detector.rs  main.rs  metrics.rs  neo4j_scanner.rs
services/benchmarker/: Cargo.toml
services/benchmarker/src/: ci.rs  main.rs  registry.rs  reporter.rs  run_manager.rs
services/ingestion/: Cargo.toml  Dockerfile
services/ingestion/src/: derive_detector.rs  lib.rs  main.rs
services/ingestion/src/embedding/: mod.rs  ollama_client.rs  qdrant_client.rs  text_representation.rs
services/ingestion/src/graph/: batch.rs  mod.rs  nodes.rs  relationships.rs
services/ingestion/src/monitoring/: audit.rs  health.rs  metrics.rs  mod.rs  monitor.rs  progress.rs  stuck_detector.rs
services/ingestion/src/parsers/: mod.rs  syn_parser.rs  tree_sitter_parser.rs
services/ingestion/src/pipeline/: change_detection.rs  circuit_breaker.rs  memory_accountant.rs  mod.rs  resilience.rs  runner.rs  stages.rs  streaming_runner.rs
services/ingestion/src/typecheck/: mod.rs  resolver.rs
services/ingestion/tests/: stress_test.rs  verify_fixes.rs
services/ingestion/tests/fixtures/: test_crate.rs
services/mcp/: Cargo.toml  Dockerfile
services/mcp/src/: client.rs  config.rs  error.rs  lib.rs  main.rs  server.rs  sse_transport.rs
services/mcp/src/tools/: aggregate_search.rs  consistency_check.rs  context_store.rs  find_type_usages.rs  get_callers.rs  get_function.rs  get_module_tree.rs  get_trait_impls.rs  mod.rs  pg_query.rs  query_graph.rs  search_code.rs  search_docs.rs  status_check.rs  task_update.rs  typecheck_tools.rs
services/mcp/tests/: mcp_integration.rs
services/projector-pg/: Cargo.toml
services/projector-pg/src/: events.rs  lib.rs  main.rs  projector.rs  tenant_pool.rs
services/validator/: Cargo.toml
services/validator/src/: comparator.rs  executor.rs  extractor.rs  github.rs  judge.rs  main.rs  models.rs  opencode.rs  preparator.rs  scorer.rs  storage.rs
tests/fixtures/test-crate/: Cargo.toml
tests/fixtures/test-crate/src/: dispatch_resolution.rs  lib.rs
(+200 files in other folders)
