[package]
name = "rb-schemas"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared domain types and schemas for rust-brain v2"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
