[package]
name = "rb-tracing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Structured logging and tracing setup for rust-brain v2"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
