[package]
name = "rustbrain-common"
version = "0.1.0"
edition = "2021"
description = "Shared types and utilities for rust-brain code intelligence platform"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "v5", "serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

[dev-dependencies]
tracing-test = { version = "0.2", features = ["no-env-filter"] }
