[package]
name = "rustbrain-benchmarker"
version = "0.1.0"
edition = "2021"
description = "Benchmarker service: eval case registry, run manager, and CI advisory output"

[[bin]]
name = "benchmarker"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.37", features = ["full"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "uuid", "time", "macros"] }

# UUID
uuid = { version = "1.8", features = ["v4", "serde"] }

# Shared types
rustbrain-common = { path = "../../crates/rustbrain-common" }

[features]
# Enable Postgres persistence functions (sync_to_db, list_suite).
# Disabled by default so unit tests run without a live database.
db = []

[dev-dependencies]
tokio = { version = "1.37", features = ["full"] }
tempfile = "3"
