[package]
name = "rustbrain-ingestion"
version = "0.1.0"
edition = "2021"
description = "Macro expansion and source ingestion service for rust-brain"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dependencies]
# Shared types
rustbrain-common = { path = "../../crates/rustbrain-common" }

# Async runtime
tokio = { version = "1.37", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "v5", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"
toml = "0.8"
toml_edit = "0.22"
num_cpus = "1.16"
rayon = "1.10"

# Pin home to avoid Rust 1.88 requirement
home = "=0.5.9"

# Parsing dependencies
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
proc-macro2 = "1.0"
quote = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async trait
async-trait = "0.1"
regex = "1.10"

# Graph database
neo4rs = "0.7"

# HTTP client for Ollama/Qdrant
reqwest = { version = "0.12", features = ["json"] }

# Stream utilities
tokio-stream = "0.1"
tokio-util = "0.7"
futures = "0.3"

# Metrics & progress
prometheus = "0.13"
indicatif = "0.17"

# Health check HTTP server
axum = "0.7"
tower = "0.5"

[dev-dependencies]
tempfile = "3"
mockito = "1.4"
tokio = { version = "1.37", features = ["full"] }
