[package]
name = "rustbrain-projector-pg"
version = "0.1.0"
edition = "2021"
description = "PG projection consumer — upserts extracted items and relations into tenant schema tables (REQ-IN-09)"

[dependencies]
# Shared types
rustbrain-common = { path = "../../crates/rustbrain-common" }

# Async runtime
tokio = { version = "1.37", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive", "env"] }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.37", features = ["full", "macros"] }
