[package]
name = "test-fixture"
version = "0.1.0"
edition = "2021"
description = "Test fixture crate for rust-brain integration tests"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

[lib]
name = "test_fixture"
path = "src/lib.rs"
